staging/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - staging.placements.100xdevs.com
      secretName: job-board-staging-tls
    - hosts:
      - staging.projects.100xdevs.com
      secretName: dailycode-staging-tls
  rules:
    - host: staging.placements.100xdevs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: job-board-staging
                port:
                  number: 80
    - host: staging.projects.100xdevs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dailycode-staging
                port:
                  number: 80
